# fastapi-simplebase

./: .flake8  .gitignore  README.md  mypy.ini  pyproject.toml
app/: main.py
tests/: test_main.py
